ViSP 2.2.1 (Modification since ViSP 2.1.0)
  - New Feature
	- add new framegrabber interface for itifg8 driver from Coreco 
	  Imaging Technology (http://sourceforge.net/projects/itifg)
	  Tested with AM-STD COMP framegrabber board on 2.4 and 2.6
	  linux kernel
  - Bug fix and improvement
        - memory leaks suppression
	- increase tests portability especially for windows
ViSP 2.2.0 (released August 25, 2006)
  - Build
	- To increase the code portability, especially under windows), 
	  all the build process is now based on CMake 
	  (see http://www.cmake.org).
	- Supported platforms:
	  Linux, Mac OSX, SunOS: g++ 2.95.3, 2.96, 3.3.x, 3.4.x, 4.1.0)
	  Windows: MSVC7 (2003.NET), MSVC8 (2005) 
	- Suppression of autotools support (configure)
	- Allows shared library building (.so and .dll)
  - New Feature
	- add control for Traclabs biclops pan-tilt head
	- add control for Directed Perception ptu-46 pan-tilt head
	- add vpDisplayGTK display under Windows
	- add vpDirectShowGrabber framegrabber under Windows
	- add vpDisplayGDI display under windows
  - Bug fix and improvement
	- vp1394Grabber settings (format, mode, framerate, shutter, gain)
	- vpDot (Moment computation)
	- some fixes in vpDisplayGTK
----------------------------------------------	
ViSP 2.1.1 (released January 6th, 2006)
   - New examples 
	- create an example directory
	- add vpDotExample.cpp  
	- add vpDot2Example.cpp  
	- add vpPoseExample.cpp 
	- add 2D0.5.VisualServoingSimulation.cpp 
  - New Feature
	- add this ChangleLog file
	- add a vpDisplayGTK class with the GTK2+ window system
	- new member function in vpDisplay (_uv)
	- add function getInteractionMatrix() in vpGenericFeature
  - Specification modifications
	- change the vpDot and vpDot2 specifications
	- supress demo directory
  - Bug fix and improvement
	- add a runtime warning when vpGenericFeature is not correctly used
	- comment in english in vpDisplayX
	- suppress a trace in vpPoseVirtualVisualServoing.cpp