@@ -3,8 +3,10 @@ ViSP 2.2.1 (Modification since ViSP 2.1.0)
 	- add new framegrabber interface for itifg8 driver from Coreco 
 	  Imaging Technology (http://sourceforge.net/projects/itifg)
 	  Tested with AM-STD COMP framegrabber board on 2.4 and 2.6
-	  linux kernel
+	  linux kernel (see vpItifg8Grabber). 
   - Bug fix and improvement
+	- tests and examples
+	- Video For Linux Two grabber (see vpV4l2Grabber)
         - memory leaks suppression
 	- increase tests portability especially for windows
 ViSP 2.2.0 (released August 25, 2006)
